--- a/app/src/main/res/layout/fragment_login_screen.xml
+++ b/app/src/main/res/layout/fragment_login_screen.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="adapter"
-            type="com.app.ezetaptask.LoginScreenAdapter" />
+            type="com.app.ezetaptask.ui.adapters.LoginScreenAdapter" />
     </data>
 
 
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            tools:context=".LoginScreenFragment">
+            tools:context=".ui.LoginScreenFragment">
 
             <TextView
                 android:layout_width="match_parent"
